src/scss/_override-variables.scss
/**
  This file is used to override @govflanders/vl-ui-design-system-style (Webuniversum styling)
  Make sure to define the variables you want to overwrite BEFORE importing the scss files
  Make sure to define the specific styles you want to overwrite AFTER importing the scss files
**/

/**
------------------------------
 Start override sass variables
------------------------------
**/

// Colors
$vl-action-color: $primary-color;
$vl-action-hover-color: $dark-purple;
$vl-action-active-color: darken($primary-color, 10);

$vl-input-hover-background-color: rgba($primary-color, 0.1) !default;
$vl-input-hover-border-color: rgba($primary-color, 0.65) !default;

$vl-error-color: $alert-color;

// Fonts
$vl-font-location: '@govflanders/vl-ui-design-system-style/assets/font/flanders/';
$vl-icon-font-location: '@govflanders/vl-ui-design-system-style/assets/font/iconfont/';

/**
----------------------------
 End override sass variables
----------------------------
**/

@import '@govflanders/vl-ui-design-system-style/scss';
/**
-------------------------------
 Start override specific styles
-------------------------------
**/

// Override CSS custom properties
:root {
  --vl-theme-primary-color: #{$primary-color};
  --vl-theme-primary-color-60: #{mix($primary-color, $white, 60%)};
  --vl-theme-primary-color-70: #{mix($primary-color, $white, 70%)};
  --vl-theme-primary-color-rgba-30: #{rgba($primary-color, 0.3)};
  --vl-theme-primary-color-rgba-20: #{rgba($primary-color, 0.2)};
  --vl-theme-primary-color-rgba-10: #{rgba($primary-color, 0.1)};

  --vl-theme-fg-color: #{$vl-mine-shaft};
  --vl-theme-fg-color-60: #{mix($vl-mine-shaft, $white, 60%)};
  --vl-theme-fg-color-70: #{mix($vl-mine-shaft, $white, 70%)};

  --vl-theme-focus-outline-color: #{mix($primary-color, $white, 65%)};

  --ms-line-height: 1.375;
}

// vl-button
.vl-button {
  cursor: pointer;
}

.vl-button--naked {
  color: $primary-color;

  &:hover,
  &:focus,
  &:active {
    color: var(--vl-theme-action-hover-color, $vl-action-hover-color);
  }
}

//vl-pill
.vl-pill {
  cursor: pointer;
  color: $primary-color;
}

// vl-link
.vl-link {
  color: $link-color;

  &:hover,
  &:focus,
  &:active {
    color: $link-color;
  }
}

// vl-multiselect
.multiselect {
  --ms-line-height: 1.315;
}

.vl-multiselect {
  flex: 1;
}

.multiselect.is-disabled {
  background-color: #f8f9fa;
  border-color: #b6bfca;

  * {
    cursor: default;
  }
}

.multiselect-placeholder {
  color: #a4acb5;
}

// vl-dropdown-navigation
.vl-dropdown-navigation .vl-popover.js-vl-popover--open .vl-dropdown-navigation__toggle,
.vl-dropdown-navigation .vl-popover.js-vl-popover--open .vl-popover__toggle {
  color: $white;
  background-color: $primary-color;
}

.vl-dropdown-navigation .vl-popover__toggle {
  background-color: $gray !important;
  color: $primary-color;
}

// oe-container vl-tabs
.oe-tabs {
  .vl-tabs__wrapper {
    display: flex;
    justify-content: center;
  }

  .vl-tab__pane {
    outline: none;
    overflow-x: hidden;
  }

  .vl-tabs__toggle,
  .vl-tabs {
    left: 0 !important;
  }

  .vl-tabs {
    .vl-tab {
      color: $mid-purple;
      outline: none;

      &--active {
        color: $dark-purple;
      }
    }
  }
}

// vl-backdrop
.vl-backdrop--active {
  z-index: 999;
}

// flatpickr - year input color
.flatpickr-current-month input.cur-year {
  color: $primary-color;
}

// flatpickr - today indication
.flatpickr-calendar.mark-today .flatpickr-day.today:not(.selected) {
  background-color: $gray;
}

.vl-u-spacer-right--xxsmall {
  margin-right: 0.5rem;
}

//ol variables
:root,
:host {
  --ol-foreground-color: #{$vl-action-hover-color};
  --ol-subtle-foreground-color: #{$vl-action-color};
  --ol-hover-border-color: #{$vl-input-hover-border-color};
}

.vl-title {
  color: $primary-color;
}

.vl-form__group {
  background-color: transparent;
}

.vl-annotation {
  color: $primary-color;
}

.text-primary {
  color: $primary-color;
}

.icon {
  cursor: pointer;
  color: $primary-color;
}

// mod-button met vl-button-tertiary neemt niet goed alle sass kleuren over. Volgens mij een bug in webuniversum,
// daarom deze css
a {
  &.vl-button--tertiary {
    color: $primary-color !important;
    &:hover {
      border-color: $primary-color !important;
    }
  }
}

// General app stylings
html,
body {
  height: 100%;
}

#app {
  display: flex;
  height: 100%;
  flex-direction: column;
  background-color: #f3f3f3;

  .vl-tab__pane:focus-visible {
    outline: none;
  }
}

.oe-flex-1 {
  flex: 1;
}

.vl-progress {
  background: unset !important;
  box-shadow: unset !important;
}

/**
-------------------------------
 End override specific styles
-------------------------------
**/

